[package]
name = "indexer-from-scratch"
version = "0.1.0"
authors = ["thala321 <phanthanhhuy1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
url = "2.2"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0.40" 
curl = "0.4.37"
postgres = "0.19.1"
tokio-postgres = "0.7.2"